--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,35 @@
+git:
+  submodules: false
+
+branches:
+  only:
+  - master
+  
+env:
+  global:
+    - PRODUCT=total
+    - ROOT_DIR=common
+    - SRC_DIR=common/public
+    - DEST_DIR=/var/www/products.groupdocs.com/html
+
+before_install:
+- openssl aes-256-cbc -K $encrypted_dfdcfd5172af_key -iv $encrypted_dfdcfd5172af_iv
+  -in deploy_key.enc -out ./deploy_key -d
+- sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+- git submodule update --init --recursive
+- git submodule foreach git pull origin master
+- eval "$(ssh-agent -s)"
+- chmod 600 ./deploy_key
+- echo -e "Host $HOST\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+- ssh-add ./deploy_key
+
+install:
+- curl -LO https://github.com/gohugoio/hugo/releases/download/v0.67.1/hugo_extended_0.67.1_Linux-64bit.deb
+- sudo dpkg -i hugo_extended_0.67.1_Linux-64bit.deb
+
 script:
-- ls
+- cp -r english $ROOT_DIR/content/
+- hugo --source $ROOT_DIR --minify --config config.toml
+
+after_success:
+- scp -i ./deploy_key -r $SRC_DIR/$PRODUCT $USER@$HOST:$DEST_DIR
