--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_dfdcfd5172af_key -iv $encrypted_dfdcfd5172af_iv
   -in deploy_key.enc -out ./deploy_key -d
 - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
-- git pull --recurse-submodules
-- git submodule update --remote --recursive
+- git submodule update --init --recursive
 - eval "$(ssh-agent -s)"
 - chmod 600 ./deploy_key
 - echo -e "Host $HOST\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
