--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
         dst_path: /content/
         dst_owner: groupdocs
         dst_repo_name: products-qa.groupdocs.com
-        dst_branch: stage
+        dst_branch: main
         src_branch: master
